K1J-405: Fixed a few sonar issues in fmb code